--- a/popup.html
+++ b/popup.html
@@ -4,13 +4,12 @@
     <style>
       button {
         height: 30px;
-        width: 30px;
         outline: none;
       }
     </style>
   </head>
   <body>
-    <button id="changeColor"></button>
+    <button id="twitter">Twitter</button>
     <script src="popup.js"></script>
   </body>
 </html>
